[package]
name = "fmgt"
version = "0.1.0"
authors = ["Joe Stubbs <joestubbs5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
serde_json = { version = "1.0.26", optional = true }
rmp-serde = { version = "0.15.0", optional = true }
uuid_ = { package = "uuid", version = "0.8", optional = true, features = ["serde"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[features]
default = ["std"]
std = [ "serde" ]